client/assets/styles/style.css
@import url(https://fonts.googleapis.com/css?family=Roboto);

body {
    font-family: 'Roboto', Helvetica, arial, sans-serif;
}

h3, h4, h5 {
    font-weight: normal;
    color: #555;
}

main {
    width: 85%;
    margin-left: auto;
    margin-right: auto;
}

footer {
    margin-top: 10px;
    color: #555;
    text-align: center;
}

header {
    margin-top: 10px;
    color: #555;
    text-align: center;
    width: 90%;
    margin-left: auto;
    margin-right: auto;
}

section {
    clear: both;
}

#login-form {
    padding: 20px;
    border-radius: 5px;
    margin-left: auto;
    margin-right: auto;
    color: #555;
    font-size: 20px;
    margin-top: 5px;
    text-align: center;
}

.content-panel {
    padding: 30px;
    margin: 10px 30px;
}

.ui-grid-header-cell-wrapper {
    height: auto;
}

#google-logo {
    text-align: center;
}

md-datepicker.md-default-theme, md-datepicker {
    background-color: #f5f5f5;
}

.md-datepicker-calendar-pane {
    background-color: #fff;
    opacity: .95;
}

.student-form-section {
    background-color: #f5f5f5;
    box-shadow: 2px 2px 4px #ccc;
    padding: 25px;
    margin-bottom: 35px;
}

.content-panel {
    background-color: #f5f5f5;
    text-align: center;
    box-shadow: 2px 2px 4px #ccc;
    padding: 25px;

}

#top-buttons {
    background-color: #f5f5f5;
    text-align: center;
    box-shadow: 2px 2px 4px #ccc;
    border-radius: 5px;
    margin-bottom: 15px;
    margin-top: 35px;
}

#ChooseFile {
    background-color: #0082C8;
    border-radius: 0px;
    color: #fff;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26);
    padding: 7px;
    margin-top: 8px;
    font-size: 12px;
}

a.md-button.md-default-theme.md-primary.md-raised,
a.md-button.md-primary.md-raised,
a.md-button.md-default-theme.md-primary.md-fab,
a.md-button.md-primary.md-fab,
.md-button.md-default-theme.md-primary.md-raised,
.md-button.md-primary.md-raised,
.md-button.md-default-theme.md-primary.md-fab,
.md-button.md-primary.md-fab {
    color: #FFF;
    /* make buttons color of company blue*/
    /*background-color: #00A4E4;*/
    /* make buttons color of logo blue*/
    background-color: #0082C9;

}

a.md-button.md-default-theme.md-primary.md-raised:not([disabled]):hover, a.md-button.md-primary.md-raised:not([disabled]):hover, a.md-button.md-default-theme.md-primary.md-fab:not([disabled]):hover, a.md-button.md-primary.md-fab:not([disabled]):hover, .md-button.md-default-theme.md-primary.md-raised:not([disabled]):hover, .md-button.md-primary.md-raised:not([disabled]):hover, .md-button.md-default-theme.md-primary.md-fab:not([disabled]):hover, .md-button.md-primary.md-fab:not([disabled]):hover {
    /*Orange*/
    background-color: #FAA333;
    color: #FFF;
}

a.md-button.md-default-theme.md-primary.md-raised:not([disabled]).md-button:active,
a.md-button.md-primary.md-raised:not([disabled]).md-button:active,
a.md-button.md-default-theme.md-primary.md-fab:not([disabled]).md-button:active,
a.md-button.md-primary.md-fab:not([disabled]).md-button:active,
.md-button.md-default-theme.md-primary.md-raised:not([disabled]).md-button:active,
.md-button.md-primary.md-raised:not([disabled]) md-button:active,
.md-button.md-default-theme.md-primary.md-fab:not([disabled]).md-button:active,
.md-button.md-primary.md-fab:not([disabled]) md-button:active {
    background-color: #FAA333;
    color: #FFF;

}

md-input-container {
    padding: 2px 2px 5px 2px;
}

#mainLogo {
    margin-top: 25px;
    width: 250px;
}

.page-header-text {
    text-align: center;
}

.add-user {
    margin-bottom: 10px;
}

.add-user.label {

}

#add-user-form {
    margin-left: auto;
    margin-right: auto;
}

md-switch.md-hue-1.md-checked .md-thumb {
    background-color: #8DC73F;
}

md-switch.md-default-theme.md-hue-1.md-checked, md-switch.md-hue-1.md-checked .md-bar {
    background-color: #8DC73F;
}

.spacer {
    padding: 20px;
    text-align: center;
    width: 35%;
    margin-left: auto;
    margin-right: auto;
}



.delete-button {
    color: #fff;
    background-color: #0082C9;
    border: 0px;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .26);

}
md-checkbox.md-checked.green .md-icon {
    /*background-color: rgba(0, 255, 0, 0.87);*/
    background-color: #8DC73F;

}

.why-red {
    color: red;
}
#sign-in-google-logo {
    width: 250px;
}
.ui-grid-cell-contents{
    font-size: 13px;
}
.ui-grid-cell-contents.ui-grid-header-cell-primary-focus{
    font-size: 13px;
}
.ui-grid-cell-contents:hover {
    cursor: pointer;
    background-color: rgb(204, 202, 202);
}
.ui-grid-cell{
    font-size: 13px;
}

